--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/SteamedMilkBun/student-mvp-project#readme",
   "dependencies": {
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "pg": "^8.11.3"
   }
