insert "type": "module" in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mvp",
   "version": "1.0.0",
+  "type": "module",
   "description": "Deploy database to Render and have basic front end ",
   "main": "server.js",
   "scripts": {
